--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A simple SVG editor.",
   "scripts": {
     "build": "npm run build-js && npm run build-css",
-    "build-js": "mkdirp dist && browserify src/main.js -o dist/bundle.js -t [ babelify --presets [ es2015 ] ]",
-    "build-css": "mkdirp dist && cp style/style.css dist"
+    "build-js": "mkdirp dist && browserify src/main.js -o dist/bundle.js -t [ babelify ]",
+    "build-css": "mkdirp dist && cp style/style.css dist",
+    "test": "mocha test/*.js --compilers js:babel-register",
+    "build-test": "mkdirp test/built && browserify test/SVGEditor.js -o test/built/test.js -t [ babelify ]"
   },
   "keywords": [
     "svg"
@@ -16,14 +18,22 @@
     "@cycle/core": "^6.0.3",
     "@cycle/dom": "^9.1.0",
     "@cycle/isolate": "^1.2.0",
-    "rx": "^4.0.8",
-    "vdom-virtualize": "https://github.com/mickylad/vdom-virtualize/tarball/style-index-fix"
+    "html-to-vdom": "^0.7.0",
+    "rx": "^4.0.8"
   },
   "devDependencies": {
     "babel-cli": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "mkdirp": "^0.5.1"
+    "chai": "^3.5.0",
+    "mkdirp": "^0.5.1",
+    "mocha": "^2.4.5",
+    "mocha-jsdom": "^1.1.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
