--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "A simple SVG editor.",
   "scripts": {
-    "build": "npm run build-js && npm run build-css",
-    "build-js": "mkdirp dist && browserify src/main.js -o dist/bundle.js -t [ babelify ]",
-    "build-css": "mkdirp dist && cp style/style.css dist",
+    "build": "npm run -s build:js && npm run -s build:css",
+    "build:js": "echo Building JavaScript... && mkdirp dist && browserify src/main.js -o dist/bundle.js -t [ babelify ] && echo JavaScript built!",
+    "build:css": "echo Building CSS... && mkdirp dist && cp style/style.css dist && echo CSS built!",
     "test": "mocha test/*.js --compilers js:babel-register",
-    "build-test": "mkdirp test/built && browserify test/SVGEditor.js -o test/built/test.js -t [ babelify ]"
+    "build:test": "echo Building tests... && mkdirp test/built && browserify test/SVGEditor.js -o test/built/test.js -t [ babelify ] && echo Tests built!",
+    "watch": "concurrently -p \"none\" \"npm run -s watch:js\" \"npm run -s watch:css\"",
+    "watch:js": "watch \"npm run -s build:js\" src",
+    "watch:css": "watch \"npm run -s build:css\" style",
+    "watch:test": "watch \"npm run -s build:test\" src"
   },
   "keywords": [
     "svg"
@@ -29,7 +33,7 @@
     "chai": "^3.5.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
-    "mocha-jsdom": "^1.1.0"
+    "mocha:jsdom": "^1.1.0"
   },
   "babel": {
     "presets": [
