--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "chai-spies": "^0.7.1",
     "concurrently": "^2.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
