Clean up tests with chai vdom helpers and more destructuring.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
+    "chai-virtual-dom": "^1.0.0",
     "concurrently": "^2.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
